allowed options for other forms, added forms to diamond-pearl to prevent errors

--- a/templates/includes/bingo-options.html
+++ b/templates/includes/bingo-options.html
@@ -201,7 +201,34 @@
     <option value="198">Murkrow</option>
     <option value="199">Slowking</option>
     <option value="200">Misdreavus</option>
-    <option value="201">Unown</option>
+    <option value="201-a">Unown a</option>
+    <option value="201-b">Unown b</option>
+    <option value="201-c">Unown c</option>
+    <option value="201-d">Unown d</option>
+    <option value="201-e">Unown e</option>
+    <option value="201-f">Unown f</option>
+    <option value="201-g">Unown g</option>
+    <option value="201-h">Unown h</option>
+    <option value="201-i">Unown i</option>
+    <option value="201-j">Unown j</option>
+    <option value="201-k">Unown k</option>
+    <option value="201-l">Unown l</option>
+    <option value="201-m">Unown m</option>
+    <option value="201-n">Unown n</option>
+    <option value="201-o">Unown o</option>
+    <option value="201-p">Unown p</option>
+    <option value="201-q">Unown q</option>
+    <option value="201-r">Unown r</option>
+    <option value="201-s">Unown s</option>
+    <option value="201-t">Unown t</option>
+    <option value="201-u">Unown u</option>
+    <option value="201-v">Unown v</option>
+    <option value="201-w">Unown w</option>
+    <option value="201-x">Unown x</option>
+    <option value="201-y">Unown y</option>
+    <option value="201-z">Unown z</option>
+    <option value="201-question">Unown ?</option>
+    <option value="201-exclamation">Unown !</option>
     <option value="202">Wobbuffet</option>
     <option value="203">Girafarig</option>
     <option value="204">Pineco</option>
@@ -352,6 +379,9 @@
     <option value="349">Feebas</option>
     <option value="350">Milotic</option>
     <option value="351">Castform</option>
+    <option value="351-sunny">Castform (sunny)</option>
+    <option value="351-rainy">Castform (rainy)</option>
+    <option value="351-snowy">Castform (snowy)</option>
     <option value="352">Kecleon</option>
     <option value="353">Shuppet</option>
     <option value="354">Banette</option>
@@ -386,7 +416,10 @@
     <option value="383">Groudon</option>
     <option value="384">Rayquaza</option>
     <option value="385">Jirachi</option>
-    <option value="386">Deoxys</option>
+    <option value="386-normal">Deoxys (normal)</option>
+    <option value="386-attack">Deoxys (attack)</option>
+    <option value="386-defense">Deoxys (defense)</option>
+    <option value="386-speed">Deoxys (speed)</option>
     <option value="387">Turtwig</option>
     <option value="388">Grotle</option>
     <option value="389">Torterra</option>
@@ -412,8 +445,12 @@
     <option value="409">Rampardos</option>
     <option value="410">Shieldon</option>
     <option value="411">Bastiodon</option>
-    <option value="412">Burmy</option>
-    <option value="413">Wormadam</option>
+    <option value="412-plant">Burmy (plant)</option>
+    <option value="412-sandy">Burmy (sandy)</option>
+    <option value="412-trash">Burmy (trash)</option>
+    <option value="413-plant">Wormadam (plant)</option>
+    <option value="413-sandy">Wormadam (sandy)</option>
+    <option value="413-trash">Wormadam (trash)</option>
     <option value="414">Mothim</option>
     <option value="415">Combee</option>
     <option value="416">Vespiquen</option>
@@ -421,9 +458,12 @@
     <option value="418">Buizel</option>
     <option value="419">Floatzel</option>
     <option value="420">Cherubi</option>
-    <option value="421">Cherrim</option>
-    <option value="422">Shellos</option>
-    <option value="423">Gastrodon</option>
+    <option value="421-sunshine">Cherrim (sunshine)</option>
+    <option value="421-overcast">Cherrim (overcast)</option>
+    <option value="422-east">Shellos (east)</option>
+    <option value="422-west">Shellos (west)</option>
+    <option value="423-east">Gastrodon (east)</option>
+    <option value="423-west">Gastrodon (west)</option>
     <option value="424">Ambipom</option>
     <option value="425">Drifloon</option>
     <option value="426">Drifblim</option>
@@ -480,6 +520,11 @@
     <option value="477">Dusknoir</option>
     <option value="478">Froslass</option>
     <option value="479">Rotom</option>
+    <option value="479-fan">Rotom (fan)</option>
+    <option value="479-frost">Rotom (frost)</option>
+    <option value="479-heat">Rotom (heat)</option>
+    <option value="479-wash">Rotom (wash)</option>
+    <option value="479-mow">Rotom (mow)</option>
     <option value="480">Uxie</option>
     <option value="481">Mesprit</option>
     <option value="482">Azelf</option>
@@ -487,13 +532,31 @@
     <option value="484">Palkia</option>
     <option value="485">Heatran</option>
     <option value="486">Regigigas</option>
-    <option value="487">Giratina</option>
+    <option value="487-altered">Giratina (altered)</option>
+    <option value="487-origin">Giratina (origin)</option>
     <option value="488">Cresselia</option>
     <option value="489">Phione</option>
     <option value="490">Manaphy</option>
     <option value="491">Darkrai</option>
-    <option value="492">Shaymin</option>
-    <option value="493">Arceus</option>
+    <option value="492-land">Shaymin (land)</option>
+    <option value="492-sky">Shaymin (sky)</option>
+    <option value="493-normal">Arceus (normal)</option>
+    <option value="493-fire">Arceus (fire)</option>
+    <option value="493-water">Arceus (water)</option>
+    <option value="493-grass">Arceus (grass)</option>
+    <option value="493-electric">Arceus (electric)</option>
+    <option value="493-fighting">Arceus (fighting)</option>
+    <option value="493-bug">Arceus (bug)</option>
+    <option value="493-flying">Arceus (flying)</option>
+    <option value="493-rock">Arceus (rock)</option>
+    <option value="493-poison">Arceus (poison)</option>
+    <option value="493-ground">Arceus (ground)</option>
+    <option value="493-ghost">Arceus (ghost)</option>
+    <option value="493-ice">Arceus (ice)</option>
+    <option value="493-dark">Arceus (dark)</option>
+    <option value="493-psychic">Arceus (psychic)</option>
+    <option value="493-steel">Arceus (steel)</option>
+    <option value="493-dragon">Arceus (dragon)</option>
     <option value="494">Victini</option>
     <option value="495">Snivy</option>
     <option value="496">Servine</option>
@@ -550,12 +613,14 @@
     <option value="547">Whimsicott</option>
     <option value="548">Petilil</option>
     <option value="549">Lilligant</option>
-    <option value="550">Basculin</option>
+    <option value="550-blue-striped">Basculin (blue)</option>
+    <option value="550-red-striped">Basculin (red)</option>
     <option value="551">Sandile</option>
     <option value="552">Krokorok</option>
     <option value="553">Krookodile</option>
     <option value="554">Darumaka</option>
     <option value="555">Darmanitan</option>
+    <option value="555-zen">Darmanitan (zen)</option>
     <option value="556">Maractus</option>
     <option value="557">Dwebble</option>
     <option value="558">Crustle</option>
@@ -585,8 +650,14 @@
     <option value="582">Vanillite</option>
     <option value="583">Vanillish</option>
     <option value="584">Vanilluxe</option>
-    <option value="585">Deerling</option>
-    <option value="586">Sawsbuck</option>
+    <option value="585-summer">Deerling (summer)</option>
+    <option value="585-autumn">Deerling (autumn)</option>
+    <option value="585-winter">Deerling (winter)</option>
+    <option value="585-spring">Deerling (spring)</option>
+    <option value="586-summer">Sawsbuck (summer)</option>
+    <option value="586-autumn">Sawsbuck (autumn)</option>
+    <option value="586-winter">Sawsbuck (winter)</option>
+    <option value="586-spring">Sawsbuck (spring)</option>
     <option value="587">Emolga</option>
     <option value="588">Karrablast</option>
     <option value="589">Escavalier</option>
@@ -641,15 +712,26 @@
     <option value="638">Cobalion</option>
     <option value="639">Terrakion</option>
     <option value="640">Virizion</option>
-    <option value="641">Tornadus</option>
-    <option value="642">Thundurus</option>
+    <option value="641-incarnate">Tornadus (incarnate)</option>
+    <option value="641-therian">Tornadus (therian)</option>
+    <option value="642-incarnate">Thundurus (incarnate)</option>
+    <option value="642-therian">Thundurus (therian)</option>
     <option value="643">Reshiram</option>
     <option value="644">Zekrom</option>
-    <option value="645">Landorus</option>
+    <option value="645-incarnate">Landorus (incarnate)</option>
+    <option value="645-therian">Landorus (therian)</option>
     <option value="646">Kyurem</option>
+    <option value="646-black">Black Kyurem</option>
+    <option value="646-white">White Kyurem</option>
     <option value="647">Keldeo</option>
-    <option value="648">Meloetta</option>
+    <option value="647-resolute">Keldeo (resolute)</option>
+    <option value="648-aria">Meloetta (aria)</option>
+    <option value="648-pirouette">Meloetta (pirouette)</option>
     <option value="649">Genesect</option>
+    <option value="649-burn">Genesect (burn)</option>
+    <option value="649-chill">Genesect (chill)</option>
+    <option value="649-douse">Genesect (douse)</option>
+    <option value="649-shock">Genesect (shock)</option>
 </select>
 
 <select name="game" class="game">
@@ -675,3 +757,14 @@
     <option value="incompleted" selected>incompleted</option>
     <option value="completed">completed</option>
 </select>
+
+
+<!-- TODO: FORMS
+tornadus 641
+thundurus 642
+landorus 645
+kyurem 646
+keldeo 647
+meloetta 648
+genesect 649
+-->
