--- a/templates/pokemon-bingo-generator.html
+++ b/templates/pokemon-bingo-generator.html
@@ -57,6 +57,7 @@
 
             <p>Planned future features:
                 <ul>
+                    <li>Gen 6-9</li>
                     <li>Allowing uploading custom images</li>
                     <li>Allowing multiple images per square (e.g. more than one pokemon, or an icon indicating a particular method like eggs)</li>
                     <li>Custom bingo dimensions</li>
