--- a/static/stylesheets/bingo.css
+++ b/static/stylesheets/bingo.css
@@ -11,8 +11,14 @@ table{
     background-color: black;
 }
 
-#generate{
-    margin: 1rem 40%;
+#buttons{
+    margin: 0 20%;
+    width: 100%;
+    height: fit-content;
+}
+
+button{
+    margin: 1rem 0;
     height: 3rem;
     width: 20%;
 }
