--- a/templates/includes/bingo-options.html
+++ b/templates/includes/bingo-options.html
@@ -1,3 +1,4 @@
+<!-- Sprite source (gen 1-5): https://veekun.com/dex/downloads -->
 <select name="dexNo" class="dexNo">
     <option value="random">Random</option>
     <option value="free">Free space</option>
@@ -757,14 +758,3 @@
     <option value="incompleted" selected>incompleted</option>
     <option value="completed">completed</option>
 </select>
-
-
-<!-- TODO: FORMS
-tornadus 641
-thundurus 642
-landorus 645
-kyurem 646
-keldeo 647
-meloetta 648
-genesect 649
--->
