--- a/templates/reaction-images.html
+++ b/templates/reaction-images.html
@@ -19,7 +19,7 @@
             <div id="buttons">
                 <button onclick="rerollImage()">Get a new image</button>
                 <select id="imgtype" name="imgtype">
-                    <option name="A N G E R Y">A N G E R Y</option>
+                    <option name="ANGERY">ANGERY</option>
                     <option name="bait">bait</option>
                     <option name="crusader memes">crusader memes</option>
                     <option name="F">F</option>
@@ -34,37 +34,16 @@
             <p>
                 This page is not meant to be frequently visited, but rather serves as a tutorial to use this feature. The frontend above to get random images is purely for asthetics and experimenting.<br>
                 The idea is to have a keyboard shortcut that, when pressed, automatically loads a random image of a particular theme into your clipboard, to be pasted anywhere.<br>
-                The process behind this is relatively simple: When the shortcut is pressed, a script is activated, which retrieves the image from <a href="/get-random-image" target="_blank">www.lekkerveld.be/get-random-image</a> and places it in your clipboard. To implement this on your own device, follow the instructions below.
+                The images are retrieved from <a href="/get-random-image" target="_blank">www.lekkerveld.be/get-random-image</a> and placed in your clipboard. To implement this on your own device, make a shell script with the following content, and link a keyboard shortcut to it:<br><br>
+                <i>#!/bin/bash<br>
+                    curl https://www.lekkerveld.be/get-random-image?\&imgtype=ANGERY | xclip -selection clipboard -target image/png -i</i><br><br>
+                imgtype=ANGERY means the image will be from the bait theme. If you want anything else, replace bait with one of the other options.
             </p>
-
-            <h3>Windows</h3>
-            <p>Windows kinda sucks, as it works differently. </p>
-
-            <h3>MacOS</h3>
-            <p>Never used it, but should work similar to Linux. Will test this on a friend's macbook somewhat soon, and then update this part of the tutorial.</p>
-
-            <h3>Linux</h3>
-            <ol>
-                <li>install xclip<br>
-                    This should be already installed. Use "which xclip" in a terminal to check (if the output is similar to "/usr/bin/xclip", it is installed).
-                </li>
-                <li>set up the shell script<br>
-                    Make a file named shellscript.sh (any name is fine, just have it end in .sh) and add the following as content (replace bait with whatever category you want to use):<br>
-                    <i>#!/bin/bash<br>
-                        curl https://www.lekkerveld.be/get-random-image?\&imgtype=bait | xclip -selection clipboard -target image/png -i</i><br>
-                    Make sure you know where you save this file. If you want to always get the same image, use the path to that image instead of /get-random-image&imgtype=bait (e.g. https://www.lekkerveld.be/static/assets/images/reactions/bait/bait.jpg)
-                </li>
-                <li>add the keyboard shortcut<br>
-                    This is different for every Linux distro, but it should be similar to Settings > keyboard > keyboard shortcuts > custom shortcuts. Create a new shortcut for "sh /home/username/path/to/script/shellscript.sh", with the path being the path to the script.<br>
-                    <i>Note: this path has to be absolute, so can't use ~/ like normal. Instead, use /home/username/, followed by the rest of the path.</i>
-                </li>
-            </ol>
 
             <hr>
             TODO:
             <ul>
                 <li>update tutorial to work for Windows</li>
-                <li>update tutorial to work for MacOS</li>
             </ul>
 
             {% include 'includes/footer.html' %}
