--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,7 @@
 <hr>
 <p>
     Feedback, new ideas and bug reports can be shared via Discord, Andy_Go#1068.<br>
+    Read about the usage of cookies on this website <a href="/cookies">here</a>.<br>
     Check out the source code <a href="https://github.com/RattatAndyGo/Lekkerveld" target="_blank">on Github</a>.
 </p>
 
