--- a/templates/pokemon-bingo-generator.html
+++ b/templates/pokemon-bingo-generator.html
@@ -33,10 +33,11 @@
                 </div>
             </div>
             <div id="buttons">
-                <button id="save" onclick="saveBoard()">Save board</button>
+                <button id="save-inputs" onclick="saveInputs()">Save inputs</button>
+                <button id="load-inputs" onclick="loadInputs()">Load inputs</button>
                 <button id="generate" onclick="requestBingoCard()">Generate!</button>
-                <button id="load" onclick="loadBoard()">Load board</button>
-                <button id="reverse-engineer" class="reverse-engineer-button" onclick="pathToInput()">Reverse engineer card</button>
+                <button id="save-board" onclick="saveBoard()">Save board</button>
+                <button id="load-board" onclick="loadBoard()">Load board</button>
             </div>
 
             <div id="bingo-div"></div>
@@ -53,29 +54,30 @@
                     <li>Is the Pokemon completed or not?</li>
                 </ul>
             <p>
-                If a random game has no sprite for the chosen Pokemon, the game is rerolled. Similarly, if a Pokemon has no sprite in a chosen game, the Pokemon will be rerolled. If an incompatible Pokemon/game pair is inputted, the game is randomized.<br>
+                If a random game has no sprite for the chosen Pokemon, the game is rerolled. Similarly, if a random Pokemon has no sprite in a chosen game, the Pokemon will be rerolled. If an incompatible Pokemon/game pair is inputted, the game is randomized.<br>
                 The randomizer checks for duplicate Pokemon*, but other forms are seen as other Pokemon. Shiny/non-shiny is considered the same Pokemon. Additionally, the randomizer will always choose the base form (the first one).<br>
-                To download the generated slideshow, use "right-click > save image as...". <br>
+                To download the generated bingo card, use "right-click > save image as...". <br>
                 <br>
-                * The dupe check checks only up until that square, so if a later square has a chosen pokemon, it might take the same one there.<br>
+                * The dupe check checks only up until that square, so if a later square has a chosen pokemon, it might be the same Pokemon anyway.<br>
                 <br>
-                You can use the "Save board" button to store the current options you have selected. At a later time, you can use the "Load board" option to immediately load those same options back in. This way you can make adjustments later, like adding a "completed" stamp to a Pokemon.<br>
+                You can use the "Save inputs" button to store the current options you have selected. At a later time, you can use the "Load inputs" option to immediately load those same options back in. This way you can make adjustments later, like adding a "completed" stamp to a Pokemon.<br>
                 The board is stored as a cookie in local storage, so make sure you have enabled cookies. If you delete your cookies, you will also delete your saved board. Additionally, the cookie expires after 365 days, but this can easily be reset by first loading and then saving the board, as this resets the cookie.<br>
-                <br>
-                When generating a card with random Pokemon, you can use the "Reverse engineer card" button to check what Pokemon you generated and change the input board to reflect this. Alternatively, you can upload a previously generated board below to change the inputs to the Pokemon on that card. This can take a bit over a minute.<br>
-                <br>
-                All generated bingo cards are stored and can be accessed via <a href="/bingo-library">this page</a>. I might occasionally delete some (depending on how many are made), and I cannot guarantee I won't accidentally lose them, so don't use it to store your bingo card. If you don't want your bingo card in this gallery, you can download the source code on Github and run it yourself.
+                The "Save board" button saves the bingo card, so randomized Pokemon are saved rather than a "random" input. These are stored on server.
             </p>
 
             <hr>
 
             <p>Upload a bingo card you previously generated to change the settings above to reflect this card.<br>
-                Note that this isn't perfect, occasionally a pokemon will not be detected. If there is a "completed" stamp on a pokemon, it will also not be detected. In either case, a free space will be used.<br>
-                This can take a bit over a minute to process.
+                If there is a "completed" stamp on a pokemon, it will not be detected, and a free space will be used.<br>
+                This can take a bit over half a minute to process.
 
                 <input type="file" id="card-to-input" name="card" accept=".png">
                 <button onclick="cardToInput()" class="reverse-engineer-button">Reverse engineer card</button>
             </p>
+
+            <hr>
+
+            {% include 'includes/id.html' %}
 
             <hr>
 
@@ -90,19 +92,8 @@
             </p>
 
             <!-- TODO
-                IF NO ID TOKEN PRESENT, GIVE POP UP ASKING IF ID TOKEN CAN BE GENERATED + INFO ABOUT WHY
-                TOKEN IS FULLY RANDOM (CHECK DUPES ANYWAY), ASK FOR NICKNAME (CHECK DUPES) FOR CARD SHARING FEATURE
-                (ASSUMING CONSENT) ADD ID TOKEN, LOAD IN BINGO CARD PAGE
-                BINGO CARD GENERATOR LIKE NORMAL
-                SAVE BINGO CARD STORES THE PATH TO THAT CARD AND LINKS IT TO THEIR ID, AND PREVENTS IT FROM BEING DELETED
-                ALLOW ARBITRARY AMOUNT OF SAVES, CHOOSE WHICH ONE TO LOAD IN (INTERFACE?)
-                WHEN NEW CARD IS GENERATED AND LAST CARD ISN'T SAVED, DELETE LAST CARD (ALTERNATIVE, CHECK IN INTERVALS TO DELETE. IF PATHS ARE LINKED TO CREATOR, SIMPLY CHECK IF THEY ARE SAVED OR NOT AND IF NOT DELETE)
-                WHEN LOADING OLD BOARD STATE, LOAD IN IMAGE FROM SAVED PATH
-                INPUT BUTTONS ARE THEN UPDATED BASED ON WHAT'S IN THE IMAGE
-                FEATURE TO UPDATE INPUT BUTTONS BY UPLOADING AN IMAGE
-
                 ON SECOND PAGE, TRACK SHINY HUNTS
-                OPTION TO CREATE NEW HUNT, WITH/WITHOUT CERTAIN INFO (POKEMON (REQUIRED), GAME, METHOD, DATE STARTED (GENERATED AUTOMATICALLY), ENCOUNTER COUNT (DEFAULT: 0)...)
+                OPTION TO CREATE NEW HUNT, WITH/WITHOUT CERTAIN INFO (POKEMON (REQUIRED), GAME, METHOD, DATE STARTED (GENERATED AUTOMATICALLY IF LEFT BLANK), ENCOUNTER COUNT (DEFAULT: 0)...)
                 ALL PARAMETERS STORED IN BACKEND, EVERY 5 MINUTES AUTOSAVE + BUTTON TO MANUALLY SAVE
                 WHEN PAGE LOADS, FETCH ALL HUNTS AND DISPLAY THEM
                 + AND - BUTTON FOR EACH HUNT TO INCREMENT COUNTER
@@ -111,19 +102,8 @@
                 TRACK STATS WHILE HUNTING (MAX ENC PER DAY, CURRENT AVERAGE PER DAY, CHANCE TO GET A SHINY IN THAT MANY ENCOUNTERS, AVERAGE SESSION TIME (?)...)
                 WHEN FINISHING HUNT, ALLOW USER TO AUTOMATICALLY UPDATE BINGO CARD (POP UP TO ASK) (FETCH CARD, SEARCH FOR POKEMON IN QUESTION, ADD COMPLETED AND ENCOUNTER COUNT)
 
-                COOKIES ONLY USED TO ID USERS, ALL INFO IS KEPT IN BACKEND
-                NO FURTHER ID CHECK, SO CHANGING COOKIE TO OTHER ID IS ENOUGH TO GET ACCESS TO THEIR BINGO CARDS (ID TOKEN IS NEVER SHOWN, AND ANY SORT OF INTERCEPT ATTACK IS TOO MUCH EFFORT, AS THEY ARE BINGO CARDS NOT BANK CARDS)
-                REPLACE BINGO CARD LIBRARY WITH LOOKUP TAB, WHERE BY ENTERING SOMEONE'S NICKNAME THEY CAN SEE THAT PERSON'S HUNTS AND BINGO CARDS (READ-ONLY, NO WRITING!!)
-                OPTION TO MAKE HUNTS PUBLIC, SO PEOPLE CAN VIEW WITHOUT KNOWING NAME IN ADVANCE (RANDOM? LIST OF NAMES? MOST RECENT UPDATES AT THE TOP?), PRIVATE (ONLY VIA LOOKUP W/ NAME) OR HIDDEN (NOT VISIBLE TO ANYONE ELSE)
-
                 ALL INFO SHOULD BE KEPT IN A PROPER DATABASE, WITH BACKUPS
-                PREVENT SQL INJECTION, OR REQUESTS TO DATA THAT SHOULDN'T BE PUBLIC (LIKE SELECT id FROM Table WHERE name = "Andy", THIS WOULD GIVE PEOPLE IDS OF OTHERS, AND THUS FULL ACCESS)
                 PREVENT OVERLOAD FROM SPAM SAVING/REQUESTS (HOW?)
-
-                THIS WORKS CROSS DEVICE, SO LONG AS THE DEVICES HAVE THE SAME PAIR OF ID/NAME TOKENS (ADD TUTORIAL TO COPY COOKIES, INTERFACE OPTION?)
-                CHECK WHAT HAPPENS WHEN OTHER DEVICE HAS SAME ID BUT DIFFERENT NAME (OR VICE VERSA), CHECKING WITH EVERY REQUEST TOO EXPENSIVE/SLOW
-
-                ALTERNATIVE TO COOKIES: FLASK SESSION STORAGE?? GOOGLE
             -->
 
             <!-- STUDY RELATED MEMES, BUSSY BUSINESS, SEARCH FOR "req.session.loggedin" -->
