--- a/templates/pokemon-bingo-generator.html
+++ b/templates/pokemon-bingo-generator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% include 'includes/head.html' %}
-    <script type="text/javascript" src="static/scripts/username.js"></script>
+    <!-- <script type="text/javascript" src="static/scripts/username.js"></script> -->
     <script type="text/javascript" src="static/scripts/bingo.js"></script>
     <link rel="stylesheet" href="static/stylesheets/bingo.css"/>
 
