--- a/templates/shiny-hunt-tracker.html
+++ b/templates/shiny-hunt-tracker.html
@@ -14,6 +14,10 @@
 
     <div id="page-container"> 
         <div id="page-content">
+
+            <div id="test-pokemon">
+                <img src="">
+            </div>
             
 
             {% include 'includes/footer.html' %}
